feature/add_404_&_500_error_view

--- a/App/Views/Signup/index.html
+++ b/App/Views/Signup/index.html
@@ -1,13 +1,15 @@
-	<div class="content">
+{% extends "base.html" %}
+{% block body %}
+<div class="content">
 				<div>
 					<svg class="title">
-						<text x="0" y="40">Wall€tfy!</text>
+						<text x="0" y="40">Wallï¿½tfy!</text>
 					</svg>
 					<p class="lead text-justify">
-						Say hello to Wall€tfy! - a personal finance application that makes money management easy. The app is designed to streamline cash tracking and help you save money.
+						Say hello to Wallï¿½tfy! - a personal finance application that makes money management easy. The app is designed to streamline cash tracking and help you save money.
 					</p>
 					<p class="lead text-justify">
-						With Wall€tfy! you will no longer look in amazement at your wallet at the end of the month. Register and join the wide group of satisfied users just now!
+						With Wallï¿½tfy! you will no longer look in amazement at your wallet at the end of the month. Register and join the wide group of satisfied users just now!
 					</p>
 				</div>
 				<div class="blur">
@@ -96,3 +98,4 @@
 					</form>
 				</div>
 			</div>
+{% endblock %}
