feature/add_user_login_controller

--- a/App/Views/500.html
+++ b/App/Views/500.html
@@ -1,4 +1,4 @@
 {% extends "base.html" %}
 {% block body %}
-<div class="w-75 mx-auto my-auto" id="500-error" style="background-image: url(...img/500.jpg)">
+<div class="w-75 mx-auto my-auto" id="500-error" style="background-image: url(...public/img/500.jpg)">
 {% endblock %}
