--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -19,17 +19,17 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
     <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="bootstrap5/css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href=".../style.css" type="text/css" />
+    <link rel="stylesheet" href="...public/css/style.css" type="text/css" />
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.10.1/dist/sweetalert2.all.min.js"></script>
-    <script type="text/javascript" src=".../main.js"></script>
+    <script type="text/javascript" src="public/js/main.js"></script>
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/sweetalert2@10.10.1/dist/sweetalert2.min.css'>
-    <link rel="icon" href=".../img/favicon.png">
+    <link rel="icon" href="...public/img/favicon.png">
 </head>
 
 <body>
     <main>
-        <section id="home" style="background-image: url(img/ewallet.png)">
+        <section id="home" style="background-image: url(...public/img/ewallet.png)">
             {% block body %}
 			{% endblock %}
             <div class="container-fluid">
@@ -48,7 +48,7 @@
         </section>
         <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
         <script src='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js'></script>
-        <script src=".../script.js"></script>
+        <script src="...public/js/script.js"></script>
         <script src="sweetalert2.all.min.js"></script>
 </body>
 
