--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -29,6 +29,22 @@
 
 <body>
     <main>
+        {% if current_user %}
+        <header id="top">
+            <h4 class="loggedAs ml-2">USER: {{ user.name }}
+            </h4>
+            <nav>
+                <ul >
+                    <li><a href="menu.php" title="Home"><span class="material-icons mx-2 align-middle">home</span>Home</a></li>
+                    <li><a href="#" class="openModal" data-toggle="modal" data-target="#addIncome"><span class="material-icons mx-2 align-middle">savings</span>Income</a></li>
+                    <li><a href="#" class="openModal" data-toggle="modal" data-target="#addExpense" title="Expense"><span class="material-icons mx-2 align-middle">shopping_cart</span>Expense</a></li>
+                    <li><a href="balance.php" title="Balance"><span class="material-icons mx-2 align-middle">insert_chart_outlined</span>Balance</a></li>
+                    <li><a href="settings.php" title="Settings"><span class="material-icons mx-2 align-middle">manage_accounts</span>Settings</a></li>
+                    <li><a href="logout.php" title="Log Out"><span class="material-icons mx-2 align-middle">logout</span>Exit</a></li>
+                </ul>
+            </nav>
+        </header>
+        {% endif %}
         <section id="home" style="background-image: url(...public/img/ewallet.png)">
             {% block body %}
 			{% endblock %}
