feature/modify_flash_messages

--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -35,12 +35,12 @@
             </h4>
             <nav>
                 <ul >
-                    <li><a href="menu.php" title="Home"><span class="material-icons mx-2 align-middle">home</span>Home</a></li>
+                    <li><a href="menu/index.html" title="Home"><span class="material-icons mx-2 align-middle">home</span>Home</a></li>
                     <li><a href="#" class="openModal" data-toggle="modal" data-target="#addIncome"><span class="material-icons mx-2 align-middle">savings</span>Income</a></li>
                     <li><a href="#" class="openModal" data-toggle="modal" data-target="#addExpense" title="Expense"><span class="material-icons mx-2 align-middle">shopping_cart</span>Expense</a></li>
-                    <li><a href="balance.php" title="Balance"><span class="material-icons mx-2 align-middle">insert_chart_outlined</span>Balance</a></li>
-                    <li><a href="settings.php" title="Settings"><span class="material-icons mx-2 align-middle">manage_accounts</span>Settings</a></li>
-                    <li><a href="logout.php" title="Log Out"><span class="material-icons mx-2 align-middle">logout</span>Exit</a></li>
+                    <li><a href="/balance/index.html" title="Balance"><span class="material-icons mx-2 align-middle">insert_chart_outlined</span>Balance</a></li>
+                    <li><a href="/settings/settings.html" title="Settings"><span class="material-icons mx-2 align-middle">manage_accounts</span>Settings</a></li>
+                    <li><a href="/login/destroy" title="Log Out"><span class="material-icons mx-2 align-middle">logout</span>Exit</a></li>
                 </ul>
             </nav>
         </header>
