--- a/App/Views/404.html
+++ b/App/Views/404.html
@@ -1,4 +1,4 @@
 {% extends "base.html" %}
 {% block body %}
-<div class="w-75 mx-auto my-auto" id="404-error" style="background-image: url(...public/img/404.jpg)">
+<div class="w-75 mx-auto my-auto" id="404-error" style="background-image: url(public/img/404.jpg)">
 {% endblock %}
