--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -1,7 +1,5 @@
-
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <title>Wall€tfy</title>
@@ -19,12 +17,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
     <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="bootstrap5/css/bootstrap.min.css" type="text/css" />
-    <link rel="stylesheet" href="...public/css/style.css" type="text/css" />
+    <link rel="stylesheet" href="/css/style.css" type="text/css" />
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10.10.1/dist/sweetalert2.all.min.js"></script>
-    <script type="text/javascript" src="public/js/main.js"></script>
+    <script type="text/javascript" src="/js/main.js"></script>
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/sweetalert2@10.10.1/dist/sweetalert2.min.css'>
-    <link rel="icon" href="...public/img/favicon.png">
+    <link rel="icon" href="../img/favicon.png">
 </head>
 
 <body>
@@ -35,17 +33,17 @@
             </h4>
             <nav>
                 <ul >
-                    <li><a href="menu/index.html" title="Home"><span class="material-icons mx-2 align-middle">home</span>Home</a></li>
+                    <li><a href="/menu/index" title="Home"><span class="material-icons mx-2 align-middle">home</span>Home</a></li>
                     <li><a href="#" class="openModal" data-toggle="modal" data-target="#addIncome"><span class="material-icons mx-2 align-middle">savings</span>Income</a></li>
                     <li><a href="#" class="openModal" data-toggle="modal" data-target="#addExpense" title="Expense"><span class="material-icons mx-2 align-middle">shopping_cart</span>Expense</a></li>
-                    <li><a href="/balance/index.html" title="Balance"><span class="material-icons mx-2 align-middle">insert_chart_outlined</span>Balance</a></li>
-                    <li><a href="/settings/settings.html" title="Settings"><span class="material-icons mx-2 align-middle">manage_accounts</span>Settings</a></li>
+                    <li><a href="/balance/index" title="Balance"><span class="material-icons mx-2 align-middle">insert_chart_outlined</span>Balance</a></li>
+                    <li><a href="/settings/index" title="Settings"><span class="material-icons mx-2 align-middle">manage_accounts</span>Settings</a></li>
                     <li><a href="/login/destroy" title="Log Out"><span class="material-icons mx-2 align-middle">logout</span>Exit</a></li>
                 </ul>
             </nav>
         </header>
         {% endif %}
-        <section id="home" style="background-image: url(...public/img/ewallet.png)">
+        <section id="home" style="background-image: url(../img/ewallet.png)">
             {% block body %}
 			{% endblock %}
             <div class="container-fluid">
@@ -64,7 +62,7 @@
         </section>
         <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
         <script src='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js'></script>
-        <script src="...public/js/script.js"></script>
+        <script src="/public/js/script.js"></script>
         <script src="sweetalert2.all.min.js"></script>
 </body>
 
