set_php_version_to_8.0

--- a/App/Views/Signup/index.html
+++ b/App/Views/Signup/index.html
@@ -87,7 +87,7 @@
 	<div class="row vertical-center">
 		<div class="main-container px-4 py-2 col-md-10 offset-md-1 my-5">
 			
-			<h1 class="mb-xl-4 text-center brand-logo"><img class="img-fluid" src="../img/favicon-white.ico" alt="Logo Dreamchaser"> Dreamchaser</h1>
+			<h1 class="mb-xl-4 text-center brand-logo"><img class="img-fluid" src="../img/favicon-white.ico" alt="Logo Walletfy"> Walletfy</h1>
 			
 				<div class="row">	
 				
