--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -7,7 +7,7 @@
 	<meta name="description" content="Naucz się zarządzać budżetem domowym i zacznij oszczedzać pieniądze już dziś!"/>	
 	
 	<title>{% block title %}{% endblock %}</title>
-	<meta name="keywords" content="save, money, dreams, goals, home, budget, dreamchaser">
+	<meta name="keywords" content="save, money, dreams, goals, home, budget,">
 	<link rel="shortcut icon" type="image/x-icon" href="../img/favicon.ico" />
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 		
@@ -15,10 +15,6 @@
 	<link href="https://fonts.googleapis.com/css?family=Monoton&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="/css/styles.css">
 	
-	<!--[if lt IE 9]>
-	<script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
-	<![endif]-->
-
 </head>
 
 
@@ -28,7 +24,7 @@
 		<header>
 			<nav class="navbar navbar-dark welcome-message navbar-expand-lg">
 				
-				<a class="navbar-brand" href="/menu/index"><img src="../img/favicon-white.ico" width="30" height="30" class="d-inline-block mr-1 align-bottom" alt="Logo Dreamchaser"><span class="brand-logo">Dreamchaser</span></a>
+				<a class="navbar-brand" href="/menu/index"><img src="../img/favicon-white.ico" width="30" height="30" class="d-inline-block mr-1 align-bottom" alt="Logo Walletfy"><span class="brand-logo">Walletfy</span></a>
 				
 				<div class="menu-btn navbar-toggler" data-toggle="collapse" data-target="#mainmenu" aria-controls="mainmenu" aria-label="Przełącznik nawigacji">
 					<div class="menu-btn__burger"></div>
